--- a/utils/check-json.ipynb
+++ b/utils/check-json.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1412,8 +1412,8 @@
     "\n",
     "    return unique_spans\n",
     "\n",
-    "path = '/home/pgajo/working/food/data/TASTEset/data/TASTEset_sep_format_en-it_unaligned_mdeberta-v3-base-recipe-aligner_0.0119.json'\n",
-    "\n",
+    "path = '/home/pgajo/working/food/data/TASTEset/data/aligned/TASTEset_sep_format_en-it_aligned_mdeberta-v3-base-recipe-aligner_0.0119.json'\n",
+    "# path = '/home/pgajo/working/food/data/TASTEset/data/aligned/TASTEset_sep_format_en-it_itemwise_deepl.json'\n",
     "# check which recipes have overlapping spans\n",
     "with open(path) as f:\n",
     "    data = json.load(f)\n",
@@ -1435,8 +1435,6 @@
    "outputs": [],
    "source": [
     "new_path = path.replace('.json', '_pruned.json')\n",
-    "\n",
-    "\n",
     "\n",
     "error_count = 0\n",
     "for i, recipe in enumerate(data['annotations']):\n",
